# TriangleCounting

./: .gitignore  README.md  bak.md  leak.md  zip_submission.py
2017-hepc-K-Truss/: directions.md  exp-data.md
2017-karypis-hepc-tc/: CMakeLists.txt  cmdline.c  defs.h  io.c  main.c  ptc.c
2017-karypis-hepc-tc/yche/: pre_processing.h  yche_helpers.cpp
2017-karypis-hepc-tc/yche/util/: primitives.h
triangle-counting/: .gitignore  CMakeLists.txt  Makefile  README.md  graph.h  pre_processing.h  pre_processing_dodg.h  primitives.h  tc_utils.h  tech_report.md  triangle_counting.h  triangle_counting_main.cpp  triangle_counting_main_baseline.cpp  triangle_counting_main_legacy.cpp
triangle-counting/legacy/: triangle_counting_main_legacy.cpp
triangle-counting/mipp/: mipp.h
triangle-counting/playground/: output_remove_duplicate.cpp  playground_inplace_sort.cpp  yche_serialization.h
triangle-counting/util/: graph.h  log.cpp  radix_hash_map.h  search_util.h  set_inter_cnt_utils.h  timer.h  util.h
truss-decomp/: CMakeLists.txt  ReadMe.md  iter_helper.cpp  iter_helper.h  main.cpp  main_helper.h  parallel_all_edge_cnc.h  pkt_merge.cpp  pkt_radix_map.cpp  pkt_support_update_utils.h  pkt_tri_cnt_intermediate.h  primitives.h  radix_hash_map.h  set_inter_cnt_utils.h  set_utils.h
truss-decomp/cmake/: SetLibraries.cmake
truss-decomp/exp_varying_parameters/: main_eval_tc.cpp  main_eval_tc_varing_wpt.cpp  main_varying_gt_ept_rs.cpp
truss-decomp/playground/: CMakeLists.txt  backup.md  reorder_helper.cpp  tc_utils.h  test_bit_op.cpp  test_inheritence.cpp  test_input.cpp  test_reorder.cpp
truss-decomp/reordering_utils/: pkc_reorder.cpp  reorder_utils.cpp
truss-decomp/util/: graph.cpp  graph.h  graph_preprocessing.cpp  stat.h  util.h
truss-decomp/util/converter/: edge_list_to_csr_performance_measure.cpp  edge_list_to_csr_performance_measure2.cpp  edge_list_to_csr_performance_measure_deg_descending.cpp  output_util.cpp  output_util.h  pscan_graph.cpp  remove_duplicates.cpp
truss-decomp/util/file_system/: file_util.h
